[gd_scene load_steps=2 format=3 uid="uid://b3v28h0qm7y5e"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_menu_script"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(420, 360)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "First Video Game"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Press Start to begin"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(240, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Start"

[node name="QuitButton" type="Button" parent="CenterContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(240, 56)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="VolumeContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="VolumeLabel" type="Label" parent="CenterContainer/Panel/VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Master Volume"

[node name="VolumeControls" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer/VolumeContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="VolumeSlider" type="HSlider" parent="CenterContainer/Panel/VBoxContainer/VolumeContainer/VolumeControls"]
custom_minimum_size = Vector2(240, 30)
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
page = 0.05
size_flags_horizontal = 3

[node name="VolumeValue" type="Label" parent="CenterContainer/Panel/VBoxContainer/VolumeContainer/VolumeControls"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "100%"
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="CenterContainer/Panel/VBoxContainer/VolumeContainer/VolumeControls/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
